--- a/walletpayment/pom.xml
+++ b/walletpayment/pom.xml
@@ -15,6 +15,17 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<jacoco.version>0.8.6</jacoco.version>
+
+<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+
+<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+
+<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+
+<sonar.language>java</sonar.language>
+
+<sonar.coverage.exclusions>**/org/training/**/exception/**,**/org/training/**/dto/**,**/org/training/**/entity/**</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,6 +67,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+     <groupId>org.springdoc</groupId>
+     <artifactId>springdoc-openapi-ui</artifactId>
+     <version>1.6.9</version>
+</dependency>
 	</dependencies>
 
 	<build>
@@ -71,6 +87,26 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
