--- a/walletpayment/src/main/resources/application.properties
+++ b/walletpayment/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/wallet
+spring.datasource.url= jdbc:mysql://localhost:3306/walletapplication
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8080
