--- a/walletpayment/pom.xml
+++ b/walletpayment/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.9</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.training</groupId>
 	<artifactId>walletpayment</artifactId>
@@ -15,20 +14,17 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
-<<<<<<< HEAD
-=======
 		<jacoco.version>0.8.6</jacoco.version>
 
-<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 
-<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 
-<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 
-<sonar.language>java</sonar.language>
+		<sonar.language>java</sonar.language>
 
-<sonar.coverage.exclusions>**/org/training/**/exception/**,**/org/training/**/dto/**,**/org/training/**/entity/**</sonar.coverage.exclusions>
->>>>>>> main
+		<sonar.coverage.exclusions>**/org/training/**/exception/**,**/org/training/**/dto/**,**/org/training/**/entity/**</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -61,14 +57,6 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-<<<<<<< HEAD
-    <groupId>org.springdoc</groupId>
-    <artifactId>springdoc-openapi-ui</artifactId>
-    <version>1.6.9</version>
-</dependency>
-		<dependency>
-=======
->>>>>>> main
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -78,14 +66,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<<<<<<< HEAD
-=======
 		<dependency>
-     <groupId>org.springdoc</groupId>
-     <artifactId>springdoc-openapi-ui</artifactId>
-     <version>1.6.9</version>
-</dependency>
->>>>>>> main
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -102,8 +87,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-<<<<<<< HEAD
-=======
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -124,7 +107,6 @@
 					</execution>
 				</executions>
 			</plugin>
->>>>>>> main
 		</plugins>
 	</build>
 
